# IBM_Project_Bateau

./: .gitignore  CMakeLists.txt  ConfigIni.bat.lnk  CopyAndBuild_raspi.bat  CopyToRaspberry.bat  GetFromRaspberry.bat  GetVideo.bat  IBM robot project.sln  RunProgram.bat  RunProgram.bat.lnk  UI-Raspi.url  build_raspi_program.bat  configIni.bat  connexionToRaspi.bat  debug.avi  devConfig.txt  errorLog.txt  folders_to_copy.txt  motherBoard_ini.bat  remote_option.patch  synch_to_raspi.bat
OLD/: OLD_CMakeLists.txt  OLD_main.cpp
Scripts/: devConfig.txt  folders_to_copy.txt
Scripts/BAT/: CopyAndBuild_raspi.bat  CopyToRaspberry.bat  GetFromRaspberry.bat  GetVideo.bat  RunProgram.bat  _load_raspi_config.bat  build_raspi_program.bat  configIni.bat  connexionToRaspi.bat  debug_paths.bat  motherBoard_ini.bat  synch_to_raspi.bat
Scripts/SSH_ping/: TCP_pingpong.ps1  UDP_pingpong.ps1
parametres/: config.ini
parametres/calibration/: calibration.txt
sources/application/: main - Copie.cpp  main.cpp  main.h
sources/fonctions/Communication/I2C/: I2C.cpp  I2C.h
sources/fonctions/Communication/IPC/: IPC.cpp  IPC.h
sources/fonctions/Communication/SPI/: SPI.cpp  SPI.h
sources/fonctions/Communication/bluetooth/: bluetooth.c  bluetooth.cpp  bluetooth.h
sources/fonctions/Communication/comms/: comms_manager.cpp  comms_manager.h
sources/fonctions/Communication/comms_listen/: CommsListenService.cpp  CommsListenService.h
sources/fonctions/Communication/ethernet/: ethernet.cpp  ethernet.h
sources/fonctions/Communication/uart/: uart.cpp  uart.h
sources/fonctions/Communication/wifi/: wifi.cpp  wifi.h
sources/fonctions/capteur/accelero_gyro_north/: accelero_gyro_north.cpp  accelero_gyro_north.h
sources/fonctions/capteur/camera/: camera.cpp  camera.h
sources/fonctions/capteur/colorSensor/: triage.cpp  triage.h
sources/fonctions/capteur/lidar/: Lidar.cpp  Lidar.h
sources/fonctions/mode/ball/: ball_logic.cpp  ball_logic.h
sources/fonctions/mode/course/: mode_course.cpp  mode_course.h
sources/fonctions/mode/labyrinthe/: mode_labyrinthe.cpp  mode_labyrinthe.h
sources/fonctions/motherboard/: motherboard_protocol.cpp  motherboard_protocol.h  robot_loop_example.cpp.txt
sources/fonctions/navigation/: navigation.cpp  navigation.h  target.cpp  target.h
sources/fonctions/utility/: errorManagement.cpp  errorManagement.h  myUtil.cpp  myUtil.h
sources/fonctions/web/frontend/: app.js
sources/fonctions/web/frontend/robot_web_demo/: app.js  index.html  style.css
sources/fonctions/web/frontend/view/: app.js  camera.html  capteur.html  index.html  listen.html  send.html  send.js  style.css
sources/fonctions/web/robotOverlay/: gpio_service.h  robot_web_bridge.cpp  robot_web_bridge.h
sources/fonctions/web/robotOverlay/example/: example_robot_web_bridge_main.cpp.bak  main_remote_web_example.cpp.bak
sources/fonctions/web/webui/: example_webui_main.cpp  webui.cpp  webui.h  webui_rt.cpp  webui_rt.h
sources/fonctions/web/webui/example/: example_webui_rt_main.cpp.bak
